# kursovaya2

./: .gitignore  AVLTree.cpp  AVLTree.h  CMakeLists.txt  ConcertActions.cpp  ConcertActions.h  DataLoader.cpp  DataLoader.h  Dialogs.h  Export.cpp  Export.h  FIO.cpp  FIO.h  HashTable.h  LICENSE  Music_school.cpp  Music_school.pro  Music_school.sln  Music_school.vcxproj  Music_school.vcxproj.filters  README.md  StudentActions.cpp  StudentActions.h  Students_entry.cpp  concerts2.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  music_school.pro  students.txt
Music_school/x64/Debug/: Music_school.exe.recipe  vc143.idb
Music_school/x64/Debug/Music_school.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Music_school.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Music_school/x64/Release/: Music_school.exe.recipe  Music_school.iobj  Music_school.ipdb
Music_school/x64/Release/Music_school.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Music_school.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/MusicSchool/core/DataLoader/: DataLoader.h
include/MusicSchool/core/containers/: AVLTree.h  HashTable.h
include/MusicSchool/core/models/: ConcertEntry.h  StudentEntry.h  Teacher.h
include/data/: DataLoader.h
include/gui/: mainwindow.h
resources/: icons.qrc  themes.json
resources/data/: concerts.txt
src/: Music_school.cpp  main.cpp
src/core/: validators.cpp  validators.h
src/core/DataLoader/: DataLoader.cpp
src/core/containers/: AVLTree.cpp  HashTable.cpp  HashTable.h  avltree.cpp  avltree.h  hashtable.cpp  hashtable.h
src/core/dataloader/: dataloader.cpp  dataloader.h
src/core/models/: FIO.cpp  FIO.h  StudentEntry.cpp  Teacher.cpp  concert_entry.h  fio.cpp  fio.h  student_entry.cpp  student_entry.h  teacher.cpp  teacher.h
src/data/: DataLoader.cpp
src/gui/: ConcertActions.cpp  ConcertActions.h  Dialogs.cpp  Dialogs.h  Export.cpp  Export.h  MainWindow.cpp  StudentActions.cpp  StudentActions.h  concert_actions.cpp  dialogs.cpp  export.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  student_actions.cpp  theme.cpp  theme.h
src/structures/: AVLTree.cpp  FIO.cpp  Students_entry.cpp  Teacher.cpp
